增加协程间通信 wait/signal 等

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "co_types.h": "c",
         "string.h": "c",
         "co_control.h": "c",
-        "coroutine.h": "c"
+        "coroutine.h": "c",
+        "atomic": "c"
     }
 }
